# hefang-note

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.cjs  CHANGELOG.md  README.md  electron.vite.config.ts  index.html  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1689233672107.mjs
.github/workflows/: build.yml
public/iconfont/: iconfont.css  iconfont.eot  iconfont.js  iconfont.json
scripts/: before-build.cjs  build-dmg.sh  build.ts  plugin-schema.json  vite-build.sh
src/: Application.tsx  commands.ts  config.ts  consts.ts  libs.ts  main.tsx  redux.ts  style.scss  types.ts  vite-env.d.ts
src-electron/: main.ts  preload.ts
src-electron/menus/: app.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.template.json  更新日志.md
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: fs.rs  git.rs  menu.rs  mod.rs
src-tauri/src/utils/: consts.rs
src/__tests__/: sm4.ts  string.ts
src/common/: ipcEvents.ts  nativeBridge.ts  utils.ts
src/data/: note-data-schema.json
src/hooks/: useAntdConfirm.tsx  useCheckUpdate.tsx  useContentLoader.tsx  useCurrent.ts  useDayjs.ts  useGlobalState.ts  useImporter.tsx  useIsDarkScheme.ts  useItemArray.tsx  useItemChildrens.tsx  useItemsTree.tsx  useMaximized.tsx  useNewModal.tsx  useNoteLocked.ts  useNoteParents.ts  usePlatform.ts  usePlugins.ts  usePluginsLoader.tsx  useSearchValue.ts  useSelectors.ts  useSettingsLoader.tsx  useSiderBarTopMenuItems.tsx  useThemeConfig.tsx  useThemes.tsx  useTranslate.ts
src/hooks/modals/: useDeleteModal.tsx  useExportModal.tsx  useImportModal.tsx  useLockContentModal.tsx  useNewModal.tsx  useVersionInfoModal.tsx
src/hooks/noteTreeItem/: noteTreeItem.module.scss  uitils.ts  useExpandIcon.tsx  useNewNoteDispatcher.ts  useOnItemClick.ts  (+6 more)
src/locales/: de.json  en.json  ja.json  zh-CN.json  zh-hans.json  zh-hant.json
src/plugin/: README.md  components.ts  defines.ts  enums.ts  index.ts  redux.ts  types.ts  utils.ts
src/redux/: index.ts  noteSlice.ts  pluginSlice.ts  settingSlice.ts  stateSlice.ts  uiSlice.ts
src/styles/: _printer.scss
src/templates/: export-html.html
src/utils/: color.ts  database.ts  debug.ts  dom.ts  encrypt.ts  file.ts  globals.ts  hash.ts  logger.ts  note-data-schema.json  notes.ts  notification.ts  plugin.tsx  shortcuts.ts  sm4.ts  sort.ts  string.ts  time.ts  url.ts  window.ts  worker.ts
src/views/: index.tsx  settings.tsx
src/worker/: README.md  index.ts
(+127 files in other folders)
