[build-dependencies.tauri-build]
features = []
version = "1.2.1"

[dependencies]
libloading = "0.8.0"
path-filetype = "0.1.1"
serde_json = "1.0"
window-shadows = "0.2.1"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tauri]
features = ["dialog-all", "fs-all", "global-shortcut-all", "http-all", "notification-all", "os-all", "path-all", "process-exit", "process-relaunch", "reqwest-native-tls-vendored", "shell-open", "system-tray", "updater", "window-maximize", "window-minimize", "window-set-always-on-top", "window-start-dragging", "window-unmaximize", "window-unminimize"]
version = "1.4.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

[package]
authors = ["iamhefang"]
description = "高性能跨平台笔记软件"
edition = "2021"
license = "GPL3"
name = "hefang-note"
repository = "https://github.com/iamhefang/hefang-note"
version = "0.6.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

